--- a/scai/solver/examples/pardiso/CMakeLists.txt
+++ b/scai/solver/examples/pardiso/CMakeLists.txt
@@ -49,9 +49,7 @@ if ( SCAI_BLAS_NAME MATCHES "MKL" AND SCAI_INDEX_TYPE STREQUAL "int" )
 
     set ( INSTALL_EXAMPLE_DIR "share/examples/scai-${MODULE_NAME}-${SCAI_VERSION}/${SUBDIR}" )
 
-    include ( Functions/buildExamples )
-
-    genExampleMakefile()       #  build make.inc, makefile.install -> makefile
+    scai_example_makefile( DESTINATION ${INSTALL_EXAMPLE_DIR} )
 
     ## install examples sources
 
