--- a/scai/tasking/examples/cuda/CMakeLists.txt
+++ b/scai/tasking/examples/cuda/CMakeLists.txt
@@ -27,7 +27,7 @@
  # Fraunhofer SCAI. Please contact our distributor via info[at]scapos.com.
  # @endlicense
  #
- # @brief CMake configuration file for taskig CUDA examples
+ # @brief CMake configuration file for tasking CUDA examples
  # @author Thomas Brandes
  # @date 08.03.2016
 ###
@@ -50,9 +50,7 @@ get_filename_component ( SUBDIR ${CMAKE_CURRENT_SOURCE_DIR} NAME )
 
 set ( INSTALL_EXAMPLE_DIR "share/examples/scai-${MODULE_NAME}-${SCAI_VERSION}/${SUBDIR}" )
 
-include ( Functions/buildExamples )
-
-genExampleMakefile()       #  build make.inc, makefile.install -> makefile
+scai_example_makefile( DESTINATION ${INSTALL_EXAMPLE_DIR} )
 
 ## install examples sources
 
