--- a/scai/lama/examples/stencil/CMakeLists.txt
+++ b/scai/lama/examples/stencil/CMakeLists.txt
@@ -43,9 +43,7 @@ endforeach ( executable )
 
 set ( INSTALL_EXAMPLE_DIR "share/examples/scai-${MODULE_NAME}-${SCAI_VERSION}/${SUBDIR}" )
 
-include ( Functions/buildExamples )
-
-genExampleMakefile()       #  build make.inc, makefile.install -> makefile
+scai_example_makefile( DESTINATION ${INSTALL_EXAMPLE_DIR} )
 
 ## install examples sources
 
