--- a/scai/solver/examples/CMakeLists.txt
+++ b/scai/solver/examples/CMakeLists.txt
@@ -45,9 +45,7 @@ add_subdirectory ( leastsquare )
 
 set ( INSTALL_EXAMPLE_DIR "share/examples/scai-${MODULE_NAME}-${SCAI_VERSION}" )
 
-include ( Functions/buildExamples )
-
-genRunScript()             #  copy run_all.sh and install it later
+scai_run_script( COPY run_all.sh DESTINATION ${INSTALL_EXAMPLE_DIR} )
 
 ## copy the Makefile from the source directory to installation
 
