--- a/scai/solver/examples/CMakeLists.txt
+++ b/scai/solver/examples/CMakeLists.txt
@@ -43,9 +43,11 @@ add_subdirectory ( spy )
 add_subdirectory ( eigenvalue )
 add_subdirectory ( leastsquare )
 
-set ( INSTALL_EXAMPLE_DIR "share/examples/scai-${MODULE_NAME}-${SCAI_VERSION}" )
+# use the recommended installation directory for this example directory
+scai_example_directory ( INSTALL_EXAMPLE_DIR )
 
-scai_run_script( COPY run_all.sh DESTINATION ${INSTALL_EXAMPLE_DIR} )
+# copy the script to run all examples
+scai_run_script ( COPY run_all.sh DESTINATION ${INSTALL_EXAMPLE_DIR} )
 
 ## copy the Makefile from the source directory to installation
 
