--- a/scai/solver/examples/FDSimulation/CMakeLists.txt
+++ b/scai/solver/examples/FDSimulation/CMakeLists.txt
@@ -48,13 +48,12 @@ configure_file( seismogram.gnuplot seismogram.gnuplot COPYONLY )
 # Configuration.txt: copy only to build directory
 configure_file( Configuration.txt Configuration.txt COPYONLY )
 
-get_filename_component ( SUBDIR ${CMAKE_CURRENT_SOURCE_DIR} NAME )
+# use the recommended installation directory for this example directory
+scai_example_directory ( INSTALL_EXAMPLE_DIR )
 
-set ( INSTALL_EXAMPLE_DIR "share/examples/scai-${MODULE_NAME}-${SCAI_VERSION}/${SUBDIR}" )
-
-scai_example_makefile( DESTINATION ${INSTALL_EXAMPLE_DIR} )
+# generate build file in example directory
+scai_example_makefile ( DESTINATION ${INSTALL_EXAMPLE_DIR} )
 
 ## install examples sources and additional files
-
 install ( FILES       ${EXAMPLE_FILES} seismogram.gnuplot Configuration.txt Configuration.hpp
           DESTINATION ${INSTALL_EXAMPLE_DIR} )
