--- a/scai/CMakeLists.txt
+++ b/scai/CMakeLists.txt
@@ -53,7 +53,7 @@ set ( SCAI_USED_MODULES ${SCAI_ALL_MODULES} CACHE STRING "Used SCAI module proje
 set ( SCAI_VERSION_NAME "Barrancas Blancas" )
 set ( SCAI_COPYRIGHT_YEAR 2017 )
 set ( SCAI_VERSION 2.2.0 )
-set ( SCAI_LIBRARY_PREFIX "scai_" )             # more unique names for all SCAI module libraries
+set ( SCAI_LIBRARY_PREFIX "scai" )             # more unique names for all SCAI module libraries
 
 ### Set Module Path
 
