--- a/scai/common/examples/cuda/CMakeLists.txt
+++ b/scai/common/examples/cuda/CMakeLists.txt
@@ -54,12 +54,13 @@ foreach ( executable CUDAExample )
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
 
-set ( INSTALL_EXAMPLE_DIR "share/examples/scai-${MODULE_NAME}-${SCAI_VERSION}/cuda" )
+# use the recommended installation directory for this example directory
+scai_example_directory ( INSTALL_EXAMPLE_DIR )
 
-scai_example_makefile( DESTINATION ${INSTALL_EXAMPLE_DIR} )
+# generate build file in example directory
+scai_example_makefile ( DESTINATION ${INSTALL_EXAMPLE_DIR} )
 
 ## install examples sources
-
 install ( FILES       ${EXAMPLE_FILES}
           DESTINATION ${INSTALL_EXAMPLE_DIR} )
 
