--- a/scai/lama/examples/stencil/CMakeLists.txt
+++ b/scai/lama/examples/stencil/CMakeLists.txt
@@ -32,8 +32,6 @@
  # @date 13 04.2017
 ###
 
-get_filename_component ( SUBDIR ${CMAKE_CURRENT_SOURCE_DIR} NAME )
-
 foreach ( executable stencilExample stencilConversion stencilGEMV stencilDist csrMult stencilBorder stencilTranspose )
     add_executable( ${executable}.exe ${executable}.cpp )
     target_link_libraries( ${executable}.exe ${MODULE_LIBRARY} )
@@ -41,12 +39,13 @@ foreach ( executable stencilExample stencilConversion stencilGEMV stencilDist cs
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
 
-set ( INSTALL_EXAMPLE_DIR "share/examples/scai-${MODULE_NAME}-${SCAI_VERSION}/${SUBDIR}" )
+# use the recommended installation directory for this example directory
+scai_example_directory ( INSTALL_EXAMPLE_DIR )
 
-scai_example_makefile( DESTINATION ${INSTALL_EXAMPLE_DIR} )
+# generate build file in example directory
+scai_example_makefile ( DESTINATION ${INSTALL_EXAMPLE_DIR} )
 
 ## install examples sources
-
 install ( FILES       ${EXAMPLE_FILES}
           DESTINATION ${INSTALL_EXAMPLE_DIR} )
 
