--- a/scai/lama/examples/tutorial/CMakeLists.txt
+++ b/scai/lama/examples/tutorial/CMakeLists.txt
@@ -39,9 +39,11 @@ foreach ( executable blas1 matrix matrix1 scalar simple vector vector_exp )
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
 
-set ( INSTALL_EXAMPLE_DIR "share/examples/scai-${MODULE_NAME}-${SCAI_VERSION}/tutorial" )
+# use the recommended installation directory for this example directory
+scai_example_directory ( INSTALL_EXAMPLE_DIR )
 
-scai_example_makefile( DESTINATION ${INSTALL_EXAMPLE_DIR} )
+# generate build file in example directory
+scai_example_makefile ( DESTINATION ${INSTALL_EXAMPLE_DIR} )
 
 ## install examples sources
 
