CMake: now individual summaries for external dependencies

--- a/scai/blaskernel/CMakeLists.txt
+++ b/scai/blaskernel/CMakeLists.txt
@@ -87,3 +87,28 @@ install ( FILES ../${MODULE_NAME}.hpp DESTINATION include/scai )
 ## add custom target doc_${MODULE_NAME} to generate Sphinx user documentation 
 include ( CustomCommands/SphinxDoc )
 
+
+## Add summary of this module
+
+if ( SCAI_BLAS_NAME MATCHES "Internal" )
+
+    scai_summary_external ( NAME      BLAS
+                            FOUND     ${BLAS_FOUND} 
+                            VERSION   "Internal" )
+
+else ()
+
+    scai_summary_external ( NAME      BLAS
+                            FOUND     ${BLAS_FOUND} 
+                            VERSION   ${BLAS_VERSION}
+                            LIBRARIES ${SCAI_SCAI_BLAS_LIBRARIES} )
+
+    scai_summary_newline ()
+
+    scai_summary_external ( NAME      Lapack
+                            FOUND     ${LAPACK_FOUND} 
+                            VERSION   ${LAPACK_VERSION}
+                            LIBRARIES ${SCAI_SCAI_LAPACK_LIBRARIES} )
+endif ()
+
+scai_summary_newline ()
