--- a/scai/tracing/CMakeLists.txt
+++ b/scai/tracing/CMakeLists.txt
@@ -82,3 +82,11 @@ install ( FILES ../${MODULE_NAME}.hpp DESTINATION include/scai )
 
 ## add custom target doc_${MODULE_NAME} to generate Sphinx user documentation 
 include ( CustomCommands/SphinxDoc )
+
+scai_summary_enabled ( NAME Java ENABLED ${USE_JAVA} )
+
+scai_summary_external ( NAME      Java
+                        FOUND     ${JAVA_FOUND}
+                        LIBRARIES ${Java_JAVAC_EXECUTABLE} )
+
+scai_summary_newline ()
