Renamed macros for more convenient name

--- a/scai/CMakeLists.txt
+++ b/scai/CMakeLists.txt
@@ -82,54 +82,66 @@ endif ()
 
 ## Define all variables (in CACHE) that are used for individual choices 
 
-include ( Functions/scai_cache_variable )
+include ( Functions/scai_build_variable )
 
-scai_cache_variable ( NAME      CMAKE_BUILD_TYPE
-                      CHOICES   "Debug" "Release" "RelWithDebInfo" "MinSizeRel"
+scai_build_variable ( NAME      CMAKE_BUILD_TYPE
+                      CHOICES   "Debug" "Release" "RelWithDebInfo" "MinSizeRel" ""
                       DEFAULT   "Debug"
                       DOCSTRING "Set build type" )
 
-scai_cache_variable ( NAME      USE_CODE_COVERAGE
+scai_build_variable ( NAME      USE_CODE_COVERAGE
                       BOOL
                       DEFAULT   False
                       DOCSTRING "Enable / Disable use of Code Coverage" )
 
-scai_cache_variable ( NAME      BUILD_TEST
+scai_build_variable ( NAME      BUILD_TEST
                       BOOL
                       DEFAULT   True
                       DOCSTRING "Enable / Disable build of test" )
 
-scai_cache_variable ( NAME      BUILD_EXAMPLES
+scai_build_variable ( NAME      BUILD_EXAMPLES
                       BOOL
                       DEFAULT   True
                       DOCSTRING "Enable / Disable build of examples" )
 
-scai_cache_variable ( NAME      BUILD_DOC
+scai_build_variable ( NAME      BUILD_DOC
                       BOOL
                       DEFAULT   True
                       DOCSTRING "Enable / Disable build of user doc" )
 
-scai_cache_variable ( NAME      SCAI_LIBRARY_TYPE
+scai_build_variable ( NAME      SCAI_LIBRARY_TYPE
                       CHOICES   STATIC SHARED
                       DEFAULT   SHARED
                       DOCSTRING "Choose the type of linking" )
 
-scai_cache_variable ( NAME      SCAI_DOC_TYPE 
-                      CHOICES   html json xml latex
+scai_build_variable ( NAME      SCAI_DOC_TYPE 
+                      CHOICES   "html" "json" "xml" "latex"
                       DEFAULT   html
                       DOCSTRING "Choose type of user documentation" )
 
-scai_cache_variable ( NAME      SCAI_ASSERT_TYPE 
-                      CHOICES   DEBUG ERROR OFF
-                      DEFAULT   DEBUG
-                      DOCSTRING "Choose type of user documentation" )
+if ( CMAKE_BUILD_TYPE STREQUAL "Release" )
+    set ( SCAI_ASSERT_DEFAULT "INFO" )
+else ()
+    set ( SCAI_ASSERT_DEFAULT "DEBUG" )
+endif ()
 
-scai_cache_variable ( NAME      SCAI_LOGGING_LEVEL
-                      CHOICES   TRACE DEBUG INFO WARN ERROR OFF
-                      DEFAULT   DEBUG
+scai_build_variable ( NAME      SCAI_ASSERT_LEVEL
+                      CHOICES   "DEBUG" "ERROR" "OFF"
+                      DEFAULT   ${SCAI_ASSERT_DEFAULT}
+                      DOCSTRING "Choose minimal level of assert @ compile time" )
+   
+if ( CMAKE_BUILD_TYPE STREQUAL "Release" )
+    set ( SCAI_LOGGING_DEFAULT "INFO" )
+else ()
+    set ( SCAI_LOGGING_DEFAULT "DEBUG" )
+endif ()
+
+scai_build_variable ( NAME      SCAI_LOGGING_LEVEL
+                      CHOICES   "TRACE" "DEBUG" "INFO" "WARN" "ERROR" "OFF"
+                      DEFAULT   ${SCAI_LOGGING_DEFAULT}
                       DOCSTRING "Choose minimal level of logging @ compile time" )
 
-scai_cache_variable ( NAME      SCAI_TRACING
+scai_build_variable ( NAME      SCAI_TRACING
                       BOOL 
                       DEFAULT   On
                       DOCSTRING "Enable / Disable tracing of regions for performance analysis" )
