--- a/scai/kregistry/CMakeLists.txt
+++ b/scai/kregistry/CMakeLists.txt
@@ -32,6 +32,13 @@
  # @date 04.07.2017
 ###
 
+## Include required scai macros
+
+include ( scai_macro/scai_module )
+include ( scai_macro/scai_project )
+include ( scai_macro/scai_subdirectories )
+include ( scai_macro/scai_library )
+
 scai_module(
 
     MODULE_NAME   kregistry
