Added make check to build and run unit tests

--- a/scai/logging/test/CMakeLists.txt
+++ b/scai/logging/test/CMakeLists.txt
@@ -44,7 +44,7 @@ scai_test_scripts( SCRIPTS       test.sh
 
 # add test ( cmake commands )
 
-enable_testing()
+# enable_testing()
 
-add_test ( logging_test test.sh )
+# add_test ( logging_test test.sh )
 
